Products endpoint with swagger
